--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <!-- Our JavaScript -->
     <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
-    <script src="database/languages.js"></script>
+    <script src="database/languages/langUI.js"></script>
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
