--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
         <div class="col-md-6 col-sm-1 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_videos" class="col-md">
                 <li><strong>Videos on my channel</strong> - subscribe to stay with the latest videos! ><a href="https://www.youtube.com/channel/UCRzBOCps1xnc1h8xhNK2hzg"><img src="https://i.ibb.co/p1CLn99/EL-str-nka-youtube-button.png" width="30" style="position: relative;"></a><</li>
-                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/aUgB0IihzLY" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/n6alE-lETxc" allowfullscreen="true"></iframe>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/aUgB0IihzLY" allowfullscreen="true"></iframe>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/doNM1AbVWt8" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/lQ-iFRKuFvU" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/6VoSOv1ZXFA" allowfullscreen="true"></iframe>
-                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/AS2XrTrF8PM" allowfullscreen="true"></iframe>
 
             </div>
         </div>
