--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('en')"><img src="images/general/lang_en.png" style="margin-right: 3px; margin-left: 3px;">EN</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('cz')"><img src="images/general/lang_cz.png" style="margin-right: 3px; margin-left: 3px;">CZ</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('de')"><img src="images/general/lang_de.png" style="margin-right: 3px; margin-left: 3px;">DE</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('fr')"><img src="images/general/lang_fr.png" style="margin-right: 3px; margin-left: 3px;">FR</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('pl')"><img src="images/general/lang_pl.png" style="margin-right: 3px; margin-left: 3px;">PL</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('ru')"><img src="images/general/lang_ru.png" style="margin-right: 3px; margin-left: 3px;">RU</a></li>
                 </ul>
             </div>
             <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
