contact page & privacy policy

--- a/events.html
+++ b/events.html
@@ -83,7 +83,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
-                <!--<a class="nav-item nav-link text-white" href="admin.html">Admin page</a>-->
+                <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
+                <a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>
             </div>
         </div>
     </nav>
