--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
-    <title>All Buildings</title>
+    <title>Contact & About Me</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
@@ -73,6 +73,10 @@
                 <ul class="dropdown-menu" role="menu" aria-labelledby="menu1">
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('en')"><img src="images/general/lang_en.png" style="margin-right: 3px; margin-left: 3px;">EN</a></li>
                     <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('cz')"><img src="images/general/lang_cz.png" style="margin-right: 3px; margin-left: 3px;">CZ</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('de')"><img src="images/general/lang_de.png" style="margin-right: 3px; margin-left: 3px;">DE</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('fr')"><img src="images/general/lang_fr.png" style="margin-right: 3px; margin-left: 3px;">FR</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('pl')"><img src="images/general/lang_pl.png" style="margin-right: 3px; margin-left: 3px;">PL</a></li>
+                    <li role="presentation"><a role="menuitem" tabindex="-1" href="#" onclick="setLanguage('ru')"><img src="images/general/lang_ru.png" style="margin-right: 3px; margin-left: 3px;">RU</a></li>
                 </ul>
             </div>
             <img src="images/general/idavis.png" width="48" style="margin-left: 10px;right:8px;top: 5px;position: absolute;">
@@ -80,7 +84,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
-                <!--<a class="nav-item nav-link text-white" href="admin.html">Admin page</a>-->
+                <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
+                <a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>
             </div>
         </div>
     </nav>
@@ -98,7 +103,127 @@
 
 <!-- BODY -->
 
+<div class="container">
+    <div class="row" style="margin-top: 50px;">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto ">
+            <div class="card card-signin my-5 ">
+                <div class="card-body " id="contact_body">
+                    <h1 id="contact" class="card-title text-center text-warning">Contact</h1>
+                    <script type="text/javascript">
 
+                        let form = document.createElement('form');
+                        form.name = "gform";
+                        form.id = "gform";
+                        form.enctype = "text/plain";
+                        form.action = "https://docs.google.com/forms/d/1ntCRBWQdjH137wRGAxjRKCGHDaJbb4yqOGndecwrM2E/formResponse?";
+                        form.target = "hidden_iframe";
+                        form.onsubmit = "submitted=true;";
+                        let p1 = document.createElement('p');
+                        p1.id = "emailP";
+                        p1.innerHTML = "Your email:";
+                        form.appendChild(p1);
+                        let input = document.createElement('input');
+                        input.type = "text";
+                        input.name = "entry.617066544";
+                        input.id = "entry.617066544";
+                        form.appendChild(input);
+                        let p2 = document.createElement('p');
+                        p2.id = "messageP";
+                        p2.innerHTML = "Your message:";
+                        form.appendChild(p2);
+                        let textArea = document.createElement('textarea');
+                        textArea.style.resize = "none";
+                        textArea.type = "text";
+                        textArea.name = "entry.333289760";
+                        textArea.id = "entry.333289760";
+                        form.appendChild(textArea);
+                        //button creation, if the spam delay is over
+                        let iframe = document.createElement('iframe');
+                        iframe.name = "hidden_iframe";
+                        iframe.id = "hidden_iframe";
+                        iframe.style.display = "none";
+                        iframe.onload = function() {
+                            if(submitted) {}
+                        }
+                        document.getElementById('contact_body').appendChild(form);
+                        document.getElementById('contact_body').appendChild(iframe);
+
+                        if (localStorage.getItem("contactLastSentMin") !== null &&
+                        Math.round(((((new Date - new Date(localStorage.getItem("contactLastSentMin"))) % 86400000) % 3600000) / 60000)) > 30) {
+                            //console.log(Math.round(((((new Date - new Date(localStorage.getItem("contactLastSentMin"))) % 86400000) % 3600000) / 60000)))
+                            //create_exception("Please wait some time before sending an email again.", 10, "success");
+                            let button = document.createElement('input');
+                            button.type = "submit";
+                            button.value = "Submit";
+                            form.appendChild(button);
+                        } else {
+                            let p3 = document.createElement('p');
+                            p3.innerHTML = "You need to wait some time before you can send an email again.";
+                            form.appendChild(p3);
+                        }
+                    </script>
+                    <!--<form name="gform" id="gform" enctype="text/plain" action="https://docs.google.com/forms/d/1ntCRBWQdjH137wRGAxjRKCGHDaJbb4yqOGndecwrM2E/formResponse?" target="hidden_iframe" onsubmit="submitted=true;">
+                        <p id="emailP">Your Email:</p>
+                        <input type="text" name="entry.617066544" id="entry.617066544"><br>
+                        <p id="messageP">Your Message:</p>
+                        <textarea style="resize: none" type="text" name="entry.333289760" id="entry.333289760"></textarea>
+                        <input type="submit" value="Submit">
+                    </form>
+
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted) {}"></iframe>
+                    -->
+                    <script src="assets/js/jquery.min.js"></script>
+                    <script type="text/javascript">var submitted=false;</script>
+                    <script type="text/javascript">
+                        $('#gform').on('submit', function(e) {
+                            $('#gform *').fadeOut(2000);
+                            //$('#gform').prepend('Email sent :) I will get to it soon...');
+                            create_exception("Successfully sent. I will get to your email soon.", 10, "success")
+                            document.getElementById("emailP").innerHTML = "";
+                            document.getElementById("messageP").innerHTML = "";
+                            //pridat osetrenie, ktore zapise do pamate prehliadaca cas odoslania a nedovoli odoslat behom
+                            //nasledujucich 30 minut
+                            var dat = new Date().toString();
+                            console.log(dat)
+                            console.log(new Date(dat))
+                            localStorage.setItem("contactLastSentMin", new Date().toString())
+                        });
+                    </script>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
+
+<div class="container">
+    <div class="row" style="margin-top: -50px;">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto ">
+            <div class="card card-signin my-5 ">
+                <div class="card-body ">
+                    <h1 id="about_me" class="card-title text-center text-warning">About Me</h1>
+                    <h6 class="card-title text-center">I would like to use this space to share some information
+                        about me, both as a player and a person. Not sure how many people
+                    is actually interested about any side information, so I will also add something
+                    about my YouTube channel and this website.<br><br>My name is David, I come from
+                        Slovakia, it's beautiful capital city Bratislava and I'm a computer science student.<br><br>
+                    This website was created as my hobby, free-time project coming from an idea of creating
+                    a very first interactive database of all buildings from the game Elvenar, published
+                        by InnoGames. Since it's initial launch in March 2021 I keep updating the website,
+                        for both - updating the database with the newest buildings from all the introduced events
+                        and updating the existing code for adding new features and additional improvements.<br><br>
+                        You may also know my YouTube channel - iDavis. I started creating this channel back in
+                        February 2019, with the initial idea of sharing a gameplay video from the event at
+                        that time. Over time the creation of my videos went across many different topics and ideas.
+                        Currently, I have several brand new ideas for the upcoming videos,
+                        that will also expand my portfolio with another game by InnoGames.
+                    </h6>
+                </div>
+            </div>
+        </div>
+
+    </div>
+</div>
 
 <!-- FOOTER -->
 
