contact page & privacy policy

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         gtag('config', 'G-9MQN4EC0WX');
     </script>
 
+    <script data-ad-client="ca-pub-4154227292627045" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
