contact & privacy policy

--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -55,7 +55,7 @@
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
-    <title>Contact & About Me</title>
+    <title>Privacy Policy</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
