contact & privacy policy

--- a/events.html
+++ b/events.html
@@ -84,7 +84,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
                 <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
-                <a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>
+                <!--<a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>-->
             </div>
         </div>
     </nav>
