--- a/events.html
+++ b/events.html
@@ -191,8 +191,19 @@
 </select>
 <input hidden type="checkbox" id="includeAppearances" name="" value="" checked>
 
+<!--<div style="margin-bottom: -5px; align-content: center">
+    <center>
+        <table>
+            <tr>
+                <td>Daily prizes</td>
+                <td>Chests</td>
+                <td>Soon</td>
+            </tr>
+        </table>
+    </center>
+</div>-->
 
-<div id="event_main" style="padding-top: 20px;">
+<div id="event_main" style="padding-top: 20px; ">
     <div id="event_buildings" style="width: 100%;">
         <div class="container center bg-skin_light_background rounded-bottom75 rounded-top75" style="width: 100%; padding-top: 20px; padding-bottom: 20px;">
             <div class="row">
