message textarea resize allowed

--- a/contact.html
+++ b/contact.html
@@ -132,7 +132,7 @@
                         p2.innerHTML = "Your message:";
                         form.appendChild(p2);
                         let textArea = document.createElement('textarea');
-                        textArea.style.resize = "none";
+                        //textArea.style.resize = "none";
                         textArea.type = "text";
                         textArea.name = "entry.333289760";
                         textArea.id = "entry.333289760";
