contact page update

--- a/contact.html
+++ b/contact.html
@@ -109,7 +109,7 @@
             <div class="card card-signin my-5 ">
                 <div class="card-body " id="contact_body">
                     <h1 id="contact" class="card-title text-center text-warning">Contact</h1>
-                    <h6 class="card-title text-center">Use this form if you have any questions or feedback for me.</h6>
+                    <h6 class="card-title text-center">Use this form if you have any questions, bug report or feedback for me.</h6>
                     <script type="text/javascript">
 
                         let form = document.createElement('form');
