--- a/admin.html
+++ b/admin.html
@@ -107,5 +107,15 @@
     <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="regenerateBuildingNamesLanguages()">GENERATE</button>
 
 </div>
+
+<div class="container" style="margin-bottom: 20px;">
+    <p>ConfigEffects a ConfigEffectsTooltips generator pre Pets:</p>
+
+
+    EffectConfigs: <input class="form-control-file" type="file" id="effectConfigs" name="filename">
+    EffectConfigsTooltips: <input class="form-control-file" type="file" id="effectConfigsTooltips" name="filename">
+    <button class="btn btn-lg btn-warning btn-block text-uppercase"  onclick="generateEffectConfigs()">GENERATE</button>
+
+</div>
 </body>
 </html>
