--- a/admin.html
+++ b/admin.html
@@ -26,6 +26,7 @@
     <script src="database/imagesBuildings.js"></script>
     <script src="database/imagesItems.js"></script>
     <script src="database/items.js"></script>
+    <script src="database/effectConfigs.js"></script>
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>Administrator Page</title>
