--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
+                <li><strong>Feeding effects are now available!</strong> In preparation for the next event, I have implemented a feeding effects description mechanic - each pet has these data available from now on (August 5th 2021)</li>
                 <li><strong>Elvarian Games event arrived!</strong> All buildings from this event are now in the database (June 24th 2021)</li>
                 <li><strong>Sorcerers' Homecoming event arrived!</strong> All buildings from this event are now in the database (May 18th 2021)</li>
                 <li><strong>Various improvements on the portal!</strong> Now the set buildings are fully supported, you can search buildings by the names and each building can be opened in it's own window (May 2nd 2021)</li>
