expiring + expiring effects

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
+                <li><strong>Expiring descriptions are now available!</strong> If a building is expiring, this information is shown in it's description; many additional buildings effects were added as well (August 6th 2021)</li>
                 <li><strong>Feeding effects are now available!</strong> In preparation for the next event, I have implemented a feeding effects description mechanic - each pet has these data available from now on (August 5th 2021)</li>
                 <li><strong>Elvarian Games event arrived!</strong> All buildings from this event are now in the database (June 24th 2021)</li>
                 <li><strong>Sorcerers' Homecoming event arrived!</strong> All buildings from this event are now in the database (May 18th 2021)</li>
@@ -115,6 +116,7 @@
             <div id="column_with_videos" class="col-md">
                 <li><strong>Videos on my channel</strong> - subscribe to stay with the latest videos! ><a href="https://www.youtube.com/channel/UCRzBOCps1xnc1h8xhNK2hzg"><img src="https://i.ibb.co/p1CLn99/EL-str-nka-youtube-button.png" width="30" style="position: relative;"></a><</li>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/n6alE-lETxc" allowfullscreen="true"></iframe>
+                <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/sWa4cT4yGIA" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/aUgB0IihzLY" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/doNM1AbVWt8" allowfullscreen="true"></iframe>
                 <iframe class="center" style="margin-top: 10px;" width="560" height="315.2" src="https://www.youtube.com/embed/lQ-iFRKuFvU" allowfullscreen="true"></iframe>
