--- a/buildings.html
+++ b/buildings.html
@@ -40,7 +40,9 @@
     <script src="database/variousData.js"></script>
     <script src="database/languages/langUI.js"></script>
     <script src="database/languages/buildingNamesLanguages.js"></script>
-    <!--<script  src="javascript/config.js"></script>-->
+    <script src="javascript/notificationHandler.js"></script>
+    <script src="database//notifications.js"></script>
+
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
     <title>All Buildings</title>
