--- a/events.html
+++ b/events.html
@@ -42,6 +42,9 @@
     <script src="database/items.js"></script>
     <script src="database/languages/langUI.js"></script>
     <script src="database/languages/buildingNamesLanguages.js"></script>
+    <script src="javascript/notificationHandler.js"></script>
+    <script src="database//notifications.js"></script>
+
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>All Events</title>
