--- a/index.html
+++ b/index.html
@@ -32,7 +32,11 @@
     <script src="javascript/exception_handler.js"></script>
     <script src="javascript/global_functions.js"></script>
     <script src="database/languages/langUI.js"></script>
+
     <!-- Our JavaScript -->
+    <script src="javascript/notificationHandler.js"></script>
+    <script src="database//notifications.js"></script>
+
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
     <title>iDavis - Elvenar</title>
