--- a/contact.html
+++ b/contact.html
@@ -121,7 +121,7 @@
                         form.onsubmit = "submitted=true;";
                         let p1 = document.createElement('p');
                         p1.id = "emailP";
-                        p1.innerHTML = "Your email:";
+                        p1.innerHTML = "Your email: <i>(optional, if you want a respond)</i>";
                         form.appendChild(p1);
                         let input = document.createElement('input');
                         input.type = "text";
