--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
     <div class="row">
         <div class="col-md-6 col-sm-11 center bg-skin_light_background rounded-bottom75 rounded-top75" style="padding-top: 20px; padding-bottom: 20px; max-height: 550px; overflow-y: scroll;">
             <div id="column_with_news" class="col-md">
+                <li><strong>The Misty Forest event arrived!</strong> All buildings from this event are now in the database (September 30th 2021)</li>
                 <li><strong>Autumn Zodiac event arrived!</strong> All buildings from this event are now in the database (August 19th 2021)</li>
                 <li><strong>Expiring descriptions are now available!</strong> If a building is expiring, this information is shown in it's description; many additional buildings effects were added as well (August 6th 2021)</li>
                 <li><strong>Feeding effects are now available!</strong> In preparation for the next event, I have implemented a feeding effects description mechanic - each pet has these data available from now on (August 5th 2021)</li>
