--- a/buildings.html
+++ b/buildings.html
@@ -45,7 +45,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
-    <title>All Buildings</title>
+    <title>All Buildings - iDavis Elvenar</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
@@ -93,6 +93,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
                 <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
+                <a class="nav-item nav-link text-white" href="donate-create.html">Donate</a>
                 <!--<a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>-->
             </div>
         </div>
