--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,12 @@
     <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
     <script src="database/languages/langUI.js"></script>
+    <script src="javascript/notificationHandler.js"></script>
+    <script src="database//notifications.js"></script>
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
-    <title>Contact & About Me</title>
+    <title>Contact & About Me - iDavis Elvenar</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
@@ -93,6 +95,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
                 <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
+                <a class="nav-item nav-link text-white" href="donate-create.html">Donate</a>
                 <!--<a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>-->
             </div>
         </div>
@@ -231,7 +234,10 @@
                         February 2019, with the initial idea of sharing a gameplay video from the event at
                         that time. Over time the creation of my videos went across many different topics and ideas.
                         Currently, I have several brand new ideas for the upcoming videos,
-                        that will also expand my portfolio with another game by InnoGames.
+                        that will also expand my portfolio with another game by InnoGames.<br><br>
+                        <h1 id="about_me" class="card-title text-center text-warning">Donate</h1>
+                        Would you like to support me with the content creation? You can use the 
+                        <b><a class="text-link" href="donate-create.html">Donate</a></b> page to make a donation.
                     </h6>
                 </div>
             </div>
