--- a/events.html
+++ b/events.html
@@ -47,7 +47,7 @@
 
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/login.css">
-    <title>All Events</title>
+    <title>All Events - iDavis Elvenar</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
@@ -95,6 +95,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
                 <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
+                <a class="nav-item nav-link text-white" href="donate-create.html">Donate</a>
                 <!--<a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>-->
             </div>
         </div>
