--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     <script src="database/languages/langUI.js"></script>
 
     <!-- Our JavaScript -->
+    <script src="javascript/global_functions.js"></script>
+    <script src="database/variousData.js"></script>
+    <script src="database/languages/langUI.js"></script>
     <script src="javascript/notificationHandler.js"></script>
     <script src="database//notifications.js"></script>
 
@@ -87,6 +90,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
                 <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
+                <a class="nav-item nav-link text-white" href="donate-create.html">Donate</a>
                 <!--<a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>-->
             </div>
         </div>
