--- a/donate-create.html
+++ b/donate-create.html
@@ -42,10 +42,12 @@
     <script src="javascript/global_functions.js"></script>
     <script src="database/variousData.js"></script>
     <script src="database/languages/langUI.js"></script>
+    <script src="javascript/notificationHandler.js"></script>
+    <script src="database//notifications.js"></script>
     <!--<script  src="javascript/config.js"></script>-->
     <!-- Modified Bootstrap CSS -->
     <link rel="stylesheet" href="css/config.css">
-    <title>Privacy Policy</title>
+    <title>Donate - iDavis Elvenar</title>
     <link rel="icon" href="images/general/idavis.png" type="image/x-icon">
 
     <!-- NAVIGATION -->
@@ -65,7 +67,15 @@
         </script>
 
         <div>
-            <div class="dropdown" style="margin-right: 40px">
+            <div class="dropdown" style="margin-right: -10px; position: relative; display: inline-block;">
+                <button class="btn btn-default dropdown-toggle" type="button" id="menu2" data-toggle="dropdown">
+                    <img src="" id="preset_chapter" style="width: 28px; position: relative">
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu" aria-labelledby="menu1" id="chapters_dropdown">
+                </ul>
+            </div>
+            <div class="dropdown" style="margin-right: 40px; position: relative; display: inline-block;">
                 <button class="btn btn-default dropdown-toggle" type="button" id="menu1" data-toggle="dropdown">
                     <img src="images/general/globe_big.png" style="width: 30px; position: relative">
                     <span class="caret"></span>
@@ -86,7 +96,7 @@
                 <a class="nav-item nav-link text-white" href=#>Soon</a>
                 <a class="nav-item nav-link text-white" href="contact.html">Contact & About Me</a>
                 <a class="nav-item nav-link text-white" href="donate-create.html">Donate</a>
-                <a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>
+                <!--<a class="nav-item nav-link text-white" href="privacyPolicy.html">Privacy Policy</a>-->
             </div>
         </div>
     </nav>
@@ -104,69 +114,35 @@
 
 <!-- BODY -->
 
-<div class="container" style="margin-top: 80px;">
+<script>
 
-<h1>Privacy Policy for iDavis's Portal</h1>
+    generateChapterDropdown();
 
-<p>At idavis-elvenar.github.io, accessible from idavis-elvenar.github.io/, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by idavis-elvenar.github.io and how we use it.</p>
+</script>
 
-<p>If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</p>
+<div class="container">
+    <div class="row" style="margin-top: 50px;">
+        <div class="col-sm-9 col-md-7 col-lg-5 mx-auto ">
+            <div class="card card-signin my-5 ">
+                <div class="card-body " id="contact_body">
+                    <h1 id="donate" class="card-title text-center text-warning">Donate</h1>
+                    <h6 class="card-title text-center">If you like the Database Portal and would like to support
+                        me with its further creation, you can use the button below to make a donation. <br><br>This is
+                    completely voluntary and you can do so if you like the content I create and feel inclined.<br><br></h6>
+                    <center><form action="https://www.paypal.com/donate" method="post" target="_top">
+                        <input type="hidden" name="hosted_button_id" value="F8F4Z9DYR2QFG" />
+                        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                        <img alt="" border="0" src="https://www.paypal.com/en_SK/i/scr/pixel.gif" width="1" height="1" />
+                        </form>                                           
+                        </center>
+                        
+                </div>
+            </div>
+        </div>
 
-<p>This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in idavis-elvenar.github.io. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the <a href="https://www.privacypolicygenerator.info/">Privacy Policy Generator</a>.</p>
-
-<h2>Consent</h2>
-
-<p>By using our website, you hereby consent to our Privacy Policy and agree to its terms.</p>
-
-<h2>Information we collect</h2>
-
-<p>The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information.</p>
-<p>If you contact us directly, we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide.</p>
-<p>When you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number.</p>
-
-<h2>How we use your information</h2>
-
-<p>We use the information we collect in various ways, including to:</p>
-
-<ul>
-    <li>Provide, operate, and maintain our website</li>
-    <li>Improve, personalize, and expand our website</li>
-    <li>Understand and analyze how you use our website</li>
-    <li>Develop new products, services, features, and functionality</li>
-    <li>Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the website, and for marketing and promotional purposes</li>
-    <li>Send you emails</li>
-    <li>Find and prevent fraud</li>
-</ul>
-
-<h2>Log Files</h2>
-
-<p>idavis-elvenar.github.io follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
-
-<h2>Cookies and Web Beacons</h2>
-
-<p>Like any other website, idavis-elvenar.github.io uses 'cookies'. These cookies are used to store information including visitors' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users' experience by customizing our web page content based on visitors' browser type and/or other information.</p>
-
-<p>For more general information on cookies, please read <a href="https://www.privacypolicyonline.com/what-are-cookies/">"What Are Cookies"</a>.</p>
-
-<h2>Google DoubleClick DART Cookie</h2>
-
-<p>Google is one of a third-party vendor on our site. It also uses cookies, known as DART cookies, to serve ads to our site visitors based upon their visit to www.website.com and other sites on the internet. However, visitors may choose to decline the use of DART cookies by visiting the Google ad and content network Privacy Policy at the following URL – <a href="https://policies.google.com/technologies/ads">https://policies.google.com/technologies/ads</a></p>
-
-
-<h2>Advertising Partners Privacy Policies</h2>
-
-<P>You may consult this list to find the Privacy Policy for each of the advertising partners of idavis-elvenar.github.io.</p>
-
-<p>Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on idavis-elvenar.github.io, which are sent directly to users' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.</p>
-
-<p>Note that idavis-elvenar.github.io has no access to or control over these cookies that are used by third-party advertisers.</p>
-
-<h2>Third Party Privacy Policies</h2>
-
-<p>idavis-elvenar.github.io's Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. </p>
-
-<p>You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers' respective websites.</p>
+    </div>
 </div>
+
 <!-- FOOTER -->
 
 
